--- a/public/landing_page/css/login.css
+++ b/public/landing_page/css/login.css
@@ -261,3 +261,72 @@ button {
     font-size: 18px;
     transition: all 0.3s ease-in;
    }
+
+
+   .radio-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.radio-label {
+    display: flex;
+    align-items: center;
+    padding: 0.5em;
+    margin-bottom: 0.5em;
+    background-color: var(--background); /* Menggunakan variabel latar belakang */
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    transition: background-color 0.2s, border-color 0.2s;
+    color: var(--color); /* Menggunakan variabel warna */
+}
+
+.radio-label:hover {
+    background-color: #000000; /* Warna latar belakang saat hover */
+}
+
+.radio-input {
+    position: absolute;
+    opacity: 0;
+}
+
+.radio-input:checked + .radio-label {
+    background-color: var(--primary-color); /* Warna latar belakang saat dipilih */
+    border-color: var(--primary-color); /* Warna border saat dipilih */
+}
+
+.radio-input:focus + .radio-label {
+    outline: 2px solid var(--primary-color); /* Warna outline saat fokus */
+}
+
+.radio-inner-circle {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    border: 2px solid var(--color); /* Warna border inner circle */
+    border-radius: 50%;
+    margin-right: 0.5em;
+    transition: border-color 0.2s;
+    position: relative;
+}
+
+.radio-label:hover .radio-inner-circle {
+    border-color: white; /* Warna border inner circle saat hover */
+}
+
+.radio-input:checked + .radio-label .radio-inner-circle {
+    border-color: white; /* Warna border inner circle saat dipilih */
+}
+
+.radio-input:checked + .radio-label .radio-inner-circle::after {
+    content: '';
+    display: block;
+    width: 0.5em;
+    height: 0.5em;
+    background-color: white; /* Warna inner circle saat dipilih */
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
